# lazytype

./: README.md  lazytype.py  pyproject.toml
