[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "lazytype"
author = "Stefan Trklja Countryman"
author-email = "stefan.countryman@gmail.com"
home-page = "https://github.com/stefco/lazytype"
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
requires-python = ">=3"
