[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "lazytype"
author = "Stefan Trklja Countryman"
author-email = "stefan.countryman@gmail.com"
classifiers = [ "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
 "Development Status :: 4 - Beta",
 "Programming Language :: Python :: 3 :: Only",
 "Topic :: Software Development :: Libraries :: Python Modules",
 "Intended Audience :: Developers",
 "Intended Audience :: Science/Research",
]
description-file = "README.md"
home-page = "https://github.com/stefco/lazytype"
requires-python = ">=3"

[tool.flit.metadata.requires-extra]
pydantic = ["pydantic"]
